--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,189 +1,19 @@
-name: CI — Admin API smoke tests
-
-on:
-  push:
-  pull_request:
-  workflow_dispatch:
-
-jobs:
-  smoke:
-    runs-on: ubuntu-latest
-    timeout-minutes: 25
-
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_DB: entreprise
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=10
-
-    env:
-      # DB locale exposée par le service postgres
-      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/entreprise?schema=public
-      # Secrets du dépôt
-      SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
-      ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
-      ADMIN_PASSWORD_HASH: ${{ secrets.ADMIN_PASSWORD_HASH }}
-      # Mot de passe en clair correspondant au hash ci-dessus
-      ADMIN_PASSWORD_PLAIN: ReenweezAdmin2025!
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-
-      - name: Ensure jq is available
-        run: |
-          if ! command -v jq >/dev/null; then
-            sudo apt-get update -y
-            sudo apt-get install -y jq
-          fi
-        continue-on-error: true
-
-      - name: Install dependencies (retry/fallback)
-        shell: bash
-        run: |
-          set -e
-          npm config set fund false
-          npm config set audit false
-          tries=0
-          until [ $tries -ge 3 ]
-          do
-            if npm ci --prefer-offline --no-audit --no-fund; then
-              exit 0
-            fi
-            tries=$((tries+1))
-            echo "npm ci failed (attempt $tries), retrying in 5s…"
-            sleep 5
-          done
-          echo "Falling back to npm install…"
-          npm install --prefer-offline --no-audit --no-fund
-        continue-on-error: true
-
-      - name: Prisma generate (retry)
-        shell: bash
-        run: |
-          set -e
-          npx prisma generate || (sleep 3 && npx prisma generate)
-        continue-on-error: true
-
-      # Toujours pousser le schéma (DB éphémère en CI), même si migrate deploy ne fait rien
-      - name: Prepare DB (migrate and always push)
-        shell: bash
-        run: |
-          set -e
-          if [ -d prisma/migrations ] && [ "$(ls -A prisma/migrations)" ]; then
-            npx prisma migrate deploy || echo "::warning::migrate deploy failed"
-          else
-            echo "No Prisma migrations found."
-          fi
-          npx prisma db push --accept-data-loss || true
-        continue-on-error: true
-
-      # Seed non bloquant (ignore l’erreur si la table manque ou autre)
-      - name: Seed DB (tsx, ignore non-fatal errors)
-        shell: bash
-        run: |
-          set +e
-          npx tsx prisma/seed.ts
-          code=$?
-          if [ $code -ne 0 ]; then
-            echo "::warning::seed failed with exit code $code, continuing…"
-          fi
-          exit 0
-        continue-on-error: true
-
       - name: Start API (background)
         shell: bash
         run: |
           set -e
-          PORT=3001
+          export PORT=3001
+
           if [ -f server/index.ts ]; then
-            npx tsx server/index.ts > api.log 2>&1 &
+            PORT=$PORT npx tsx server/index.ts > api.log 2>&1 &
           elif [ -f server/app.ts ]; then
-            npx tsx server/app.ts > api.log 2>&1 &
+            PORT=$PORT npx tsx server/app.ts > api.log 2>&1 &
           elif [ -f server/main.ts ]; then
-            npx tsx server/main.ts > api.log 2>&1 &
+            PORT=$PORT npx tsx server/main.ts > api.log 2>&1 &
           elif npm run | grep -q '^  dev:server'; then
-            npm run dev:server > api.log 2>&1 &
+            PORT=$PORT npm run dev:server > api.log 2>&1 &
           else
-            npm run dev > api.log 2>&1 &
+            PORT=$PORT npm run dev > api.log 2>&1 &
           fi
+
           echo $! > api.pid
-        continue-on-error: true
-
-      - name: Wait for /api/health
-        shell: bash
-        run: |
-          set +e
-          for i in {1..90}; do
-            if curl -fsS http://localhost:3001/api/health >/dev/null; then
-              echo "API is up"
-              exit 0
-            fi
-            sleep 2
-          done
-          echo "::warning::API did not become healthy in time, continuing…"
-          exit 0
-        continue-on-error: true
-
-      - name: Get CSRF token
-        shell: bash
-        run: |
-          set +e
-          curl -fsS -c cookies.txt http://localhost:3001/api/csrf -o csrf.json
-          if [ -s csrf.json ]; then
-            echo "CSRF=$(jq -r '.csrfToken // empty' csrf.json)" >> "$GITHUB_ENV"
-          fi
-        continue-on-error: true
-
-      - name: Log in as admin
-        shell: bash
-        run: |
-          set +e
-          if [ -z "${CSRF:-}" ]; then
-            echo "::warning::No CSRF token present; skipping login"
-            exit 0
-          fi
-          curl -fsS -b cookies.txt -c cookies.txt \
-            -H "Content-Type: application/json" \
-            -H "X-CSRF-Token: $CSRF" \
-            -X POST http://localhost:3001/api/auth/login \
-            -d "{\"email\":\"$ADMIN_EMAIL\",\"password\":\"$ADMIN_PASSWORD_PLAIN\"}" \
-            -o login.json || true
-          cat login.json || true
-        continue-on-error: true
-
-      - name: Dashboard summary
-        shell: bash
-        run: |
-          set +e
-          curl -fsS -b cookies.txt http://localhost:3001/api/admin/dashboard/summary -o summary.json || true
-          cat summary.json 2>/dev/null | jq . || true
-        continue-on-error: true
-
-      - name: Always print API logs
-        if: always()
-        run: |
-          echo "===== API LOGS ====="
-          cat api.log || true
-
-      - name: Kill API (if running)
-        if: always()
-        run: |
-          if [ -f api.pid ]; then
-            kill $(cat api.pid) || true
-          fi
